# RazorProject

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
FinalProject/: FinalAssemblie.SLDASM  carapace.SLDPRT  carapace.STL  mancal.SLDPRT  teto2.SLDPRT
HenryBoard/0.2.0/: HenryBoard.brd  HenryBoard.sch
Vision/: CMakeLists.txt  Ideas  Vision.pro  main.cpp
Vision/RazorVision/: CMakeLists.txt
Vision/domVision/RazorVision/: .gitignore  CMakeLists.txt  RazorVision  RazorVision.pro
Vision/domVision/RazorVision/include/constants/: captureconsts.h
Vision/domVision/RazorVision/include/entities/brain/: brain.hh  cerebellum.hh
Vision/domVision/RazorVision/include/entities/vision/: colorreceptor.hh  eye.hh
Vision/domVision/RazorVision/include/utils/: mypoint.h  utils.hh
Vision/domVision/RazorVision/src/: main.cpp
Vision/domVision/RazorVision/src/entities/brain/: brain.cc  cerebellum.cc
Vision/domVision/RazorVision/src/entities/vision/: colorreceptor.cc  eye.cc
Vision/domVision/RazorVision/src/utils/: utils.cc
Vision/domVision/RazorVision/tmp/moc/: moc_predefs.h
Vision/include/: colourtrack.hh  imagecapture.hh  videoObserver.hh
Vision/src/: ballTrack.cc  colourtrack.cc  imagecapture.cc  main.cc  videoObserver.cc
Vision/testeCV/: main.cpp  testeCV  testeCV.pro
include/: ballTrack.hh
src/: ballTrack.cc
